--- a/dicee.html
+++ b/dicee.html
@@ -11,7 +11,7 @@
 
     <div class="container">
       <h1>Refresh Me</h1>
-
+      <p>Refresh to roll again!</p>
       <div class="dice">
         <p>Player 1</p>
         <img class="img1" src="images/dice6.png">
