--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Dicee</title>
+    <link rel="shortcut icon" href="/images/dice-favicon.png">
+    <title>Dice Roll</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
 
@@ -25,5 +26,8 @@
     </div>
 
     <script src="index.js"></script>
+    <footer>
+      <div>Dice Favicon made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+    </footer>
   </body>
 </html>
